Fix DCHECKs in HammerdClient D-Bus callbacks

DCHECKs in callbacks did not match corresponding signals.

Bug: 902717
Change-Id: I1fb9385ce0360445593c1c1b095706dfcd4821dc
Reviewed-on: https://chromium-review.googlesource.com/c/1331092
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Shao-Chuan Lee <shaochuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607531}
Former-commit-id: 330ebc0b5730376a591e6c022a853645988f52c4